WIP: Preparing for Microsoft 365 authentication implementation
